--- a/css存储/主页.css
+++ b/css存储/主页.css
@@ -3,6 +3,8 @@ body {
       line-height: 1.6;
       margin: 0;
       padding: 0;
+      /* background-image: url(https://img1.imgtp.com/2023/09/25/3EObYwEy.jpg);
+      background-size: 992px; */
   }
 
   header {
@@ -65,6 +67,21 @@ body {
       color: #fff;
       text-align: center;
       padding: 1rem;
+  }
+
+  li{
+    width: 685.6px;
+        padding: 13px;
+        border: 5px solid gray;
+        margin: 0;
+        border-style: solid;
+        border-width: 0px;
+        background: #4776E6;
+        /* fallback for old browsers */
+        background: -webkit-linear-gradient(to right, #8E54E9, #4776E6);
+        /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(to right, #8E54E9, #4776E6);
+        /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   }
 
   /* 添加一些响应式样式 */
